# ckpool-api

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: client.rs
src/: builder.rs  client.rs  error.rs  lib.rs  response.rs
