[package]
name = "ckpool-api"
version = "0.1.0"
edition = "2024"
description = "A Rust client library for reading stats from CKPool."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/ckpool-api"
repository = "https://github.com/shadowylab/ckpool-api.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "ckpool", "api"]

[features]
# Default features
default = ["rustls"]
# Enable rust TLS
rustls = ["reqwest/rustls-tls"]
# Enable natile TLS (openssl)
nativetls = ["reqwest/native-tls"]
# Enable socks proxy
socks = ["reqwest/socks"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
